--- a/Examples/Ch03/Ex04_Async/Ex04_Async.csproj
+++ b/Examples/Ch03/Ex04_Async/Ex04_Async.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{20D1AF4E-2DDB-438B-8992-E58AAC887D72}</ProjectGuid>
+    <ProjectGuid>{89E8F36E-5B61-4C0D-A2E0-D6E3D9DEA73B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ex01_Sync</RootNamespace>
-    <AssemblyName>Ex01_Sync</AssemblyName>
+    <RootNamespace>Ex04_Async</RootNamespace>
+    <AssemblyName>Ex04_Async</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
